# Secos_rust

./: .gitignore
rust_kernel/: Cargo.toml  README.md  build.rs
rust_kernel/kernel_core/: Cargo.toml  kernel_target32.json
rust_kernel/kernel_core/src/: cpu.rs  entry.asm  interrupts.rs  lib.rs  multiboot.rs  peripherals.rs  pic.rs  segmem.rs  serial.rs  syscalls.rs  tasks.rs  userland_tasks.rs  utils.rs
rust_kernel/kernel_core/src/paging/: mod.rs  pagemem.rs  physmem.rs  virtmem.rs
rust_kernel/kernel_core/utils/: linker.lds
rust_kernel/src/: main.rs
tp0/: tp.c
tp1/: tp.c
