[package]
name = "kernel_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# modular-bitfield = "0.11.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

